--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ body{
 
 .card_image{
     position: absolute;
-    /* object-fit: cover; */
-    /* object-position: center; */
+    object-fit: cover;
+    object-position: center;
     width: 100%;
     height: 100%;
 }
